# claude-hooks

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
claude_hooks/: __init__.py  logger.py  notifier.py  ruff.py
